# PresenceCube

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Edit-ProjectConfig.ps1  Makefile  README.md  SUCCESS_STORY.md  Setup-Dependencies.ps1  build_env.ps1  build_env.sh  clean_project.ps1  clean_project.sh  invoke-environment.ps1  invoke-pio.ps1  invoke-tests.ps1  platformio.ini  run_embedded.ps1  run_embedded.sh  run_native.ps1  run_native.sh  run_pio.sh  sdkconfig.defaults  test_embedded.ps1  test_embedded.sh  test_native.ps1  test_native.sh
.github/workflows/: ci.yml
components/: README.md
components/hagl_hal_lib/: library.json
components/hagl_lib/: library.json
components/idf-tft_espi/: CMakeLists.txt  User_Setup_STM7735.h
components/math_helper/: CMakeLists.txt  math_helper.c
components/number-display/: CMakeLists.txt  NumberDisplay.cpp
components/number-display/include/: number_display.h
config/: Led.Kconfig.projbuild  Mqtt.Kconfig.projbuild  Wifi.Kconfig.projbuild
docs/: CODING_GUIDELINES.md
hooks/: pre-push
lib/: README
main/: CMakeLists.txt  Kconfig.projbuild  blink.c  blink.cpp  mqtt_setup.c  wifi_setup.c  zube_ledc.c
main/include/: mqtt_setup.h  wifi_setup.h  zube_ledc.h
scripts/: Invoke-ScriptTests.ps1  Set-DefaultEnv.ps1  Setup-Dependencies.ps1  install-powershell.sh  render-display.py  render-display.sh  set-color.sh  set-hud.sh
src/: Kconfig.projbuild  color_util.h  display.c  display.h  main.c  main.cpp  spiffs.c  spiffs.h  wifi_setup.h  zube_ledc.c  zube_ledc.h
test/: README  test_main.cpp  test_match_helper.c
(+411 files in other folders)
